# laba4

./: CMakeLists.txt
include/: DataStructure.h  FileGenerator.h
res/: scenario_a_thread1.txt  scenario_a_thread2.txt  scenario_a_thread3.txt  scenario_b_thread1.txt  scenario_b_thread2.txt  scenario_b_thread3.txt  scenario_c_thread1.txt  scenario_c_thread2.txt  scenario_c_thread3.txt
src/: DataStructure.cpp  FileGenerator.cpp  main.cpp
